WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152838
[mips] GPRInfo::toArgumentRegister missing
https://bugs.webkit.org/show_bug.cgi?id=152838
Summary
[mips] GPRInfo::toArgumentRegister missing
Konstantin Tokarev
Reported
2016-01-07 10:43:27 PST
Added missing GPRInfo::toArgumentRegister implementation for MIPS
Attachments
Patch
(1.39 KB, patch)
2016-01-07 10:46 PST
,
Konstantin Tokarev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konstantin Tokarev
Comment 1
2016-01-07 10:46:02 PST
Created
attachment 268467
[details]
Patch
Michael Saboff
Comment 2
2016-01-07 10:51:49 PST
Comment on
attachment 268467
[details]
Patch We do not have plans to implement passing arguments in registers for 32 bit platforms. Therefore this is not needed.
Konstantin Tokarev
Comment 3
2016-01-07 11:10:09 PST
GPRInfo::toArgumentRegister is used at Source/JavaScriptCore/jit/CCallHelpers.h:58 which currently breaks compilation on MIPS BTW, MIPS32 has 32 GPRs so it would be the right thing to pass arguments via registers.
Michael Saboff
Comment 4
2016-01-07 11:17:47 PST
Comment on
attachment 268467
[details]
Patch r=me. Forgot that this is used in other areas.
Michael Saboff
Comment 5
2016-01-07 11:21:10 PST
(In reply to
comment #3
)
> GPRInfo::toArgumentRegister is used at > Source/JavaScriptCore/jit/CCallHelpers.h:58 which currently breaks > compilation on MIPS > > BTW, MIPS32 has 32 GPRs so it would be the right thing to pass arguments via > registers.
With only 4 argument registers, it still doesn't make sense to pass arguments in registers. Effectively this would only allow for "this" to be passed. a0 would have the callee, a1 would have the arg count, and a2/a3 would have the tag and payload for this. Even if we didn't pass the callee and arg count in registers, that would only give this and arg1.
WebKit Commit Bot
Comment 6
2016-01-07 12:00:25 PST
Comment on
attachment 268467
[details]
Patch Clearing flags on attachment: 268467 Committed
r194709
: <
http://trac.webkit.org/changeset/194709
>
WebKit Commit Bot
Comment 7
2016-01-07 12:00:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug