[mips] GPRInfo::toArgumentRegister missing https://bugs.webkit.org/show_bug.cgi?id=152838

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-01-07
Reviewed by Michael Saboff.

* jit/GPRInfo.h:
(JSC::GPRInfo::toArgumentRegister):

Canonical link: https://commits.webkit.org/170929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194709 268f45cc-cd09-0410-ab3c-d52691b4dbfc